--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li class="li-1"><a href="#quienes-somos">Quienes somos</a></li>
                 <li class="li-1"><a href="#que-hacemos">Que hacemos</a></li>
                 <li class="li-1"><a href="#works">Noticias</a></li>
+                <li class="li-1"><a href="#pedidos">Pedidos</a></li>
                 <li class="li-1"><a href="#form">Contacto</a></li>
             </ul>
         </section>
@@ -65,17 +66,41 @@
                 <h2 class="que-hacemos-title">Que hacemos</h2>
                 <ul class="que-hacemos-list">
                     <div class="que-hacemos-list-cards"><li><i class="fas fa-capsules"></i>Laboratorio magistral de Excelencia</li></div>
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-seedling"></i>Homeopatía</li></div>
+                    <div class="que-hacemos-list-cards"><li><i class="fas fa-spa"></i></i>Homeopatía y Flores de Bach</li></div>
                     <div class="que-hacemos-list-cards"><li><i class="fab fa-pagelines"></i>Fitoterapia</li></div>
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-spa"></i>Flores de Bach</li></div>
                     <div class="que-hacemos-list-cards"><li><i class="fas fa-mortar-pestle"></i></i>Cosmética natural</li></div>
                     <div class="que-hacemos-list-cards"><li><i class="fas fa-spray-can"></i>Dermocosmética</li></div>
                     <div class="que-hacemos-list-cards"><li><i class="fas fa-running"></i>Nutrición y deportes</li></div>
                 </ul>
             </section>
             <!-- Fin que hacemos -->
+            <!-- Inicio Pedidos -->
+            <section class="pedidos-container" id="pedidos">
+                <h2 class="pedidos-title">Pedidos</h2>
+                <form class="pedidos-form" action="" method="post">
+                    <input class="pedidos-form-items" type="text" name="name" placeholder="Nombre y apellido"> 
+                    <input class="pedidos-form-items" type="number" placeholder="Ingresá tu número telefónico">
+                    <input class="pedidos-form-items" type="email" name="_replyto" id="mail" placeholder="Email"> 
+                    <input class="pedidos-form-items" type="date"  name="birthday"> 
+                    <label class="pedidos-form-items-file-label" for="file"><span class="file">Cargá tu receta</span></label>
+                    <span class="file"><input class="pedidos-form-items-file" type="file" id="file" name="file"></span>
+                    <textarea name="texto" cols="30" rows="10"></textarea>
+                    <input class="pedidos-form-button" class="button-submit" type="submit" id="enviar">
+                </form>
+            </section>
+            <!-- Fin Pedidos -->
         </div>
   </div>
   <script src="https://kit.fontawesome.com/7aa36192fa.js" crossorigin="anonymous"></script>
+  <script type="application/javascript">
+    jQuery('input[type=file]').change(function(){
+     var filename = jQuery(this).val().split('\\').pop();
+     var idname = jQuery(this).attr('id');
+     console.log(jQuery(this));
+     console.log(filename);
+     console.log(idname);
+     jQuery('span.'+idname).next().find('span').html(filename);
+    });
+    </script>
 </body>
 </html>
