Cambio de banner

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
   <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
-  <link rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>Farmacia Jovanovich</title>
 </head>
 <body>
@@ -41,9 +41,6 @@
             <section class="banner-container" id="home">
                 <div class="background-image"></div>
                 <h1 class="banner-title">FARMACIA PROFESIONAL, LA CONSULTA DISPONIBLE</h1>
-                <a class="banner-container__scroll" href="#skils">
-                <span>Scroll Down</span>
-                </a>
             </section>
             <!-- Inicio quienes somos -->
             <section class="quienes-somos-container" id="quienes-somos">
@@ -89,6 +86,10 @@
                 </form>
             </section>
             <!-- Fin Pedidos -->
+            <!-- Inicio footer -->
+            <footer>
+                
+            </footer>
         </div>
   </div>
   <script src="https://kit.fontawesome.com/7aa36192fa.js" crossorigin="anonymous"></script>
