--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <p>Destacamos que pueden hacer su pedido por cualquier medio, Whatsapp, telefónico, vía mail, skype y mensaje privado por facebook.</p>
                 <p>Y por supuesto estamos a disposición de cualquier consulta y asesoramiento en forma personal por su Farmacéutica.</p>
                 <div class="quienes-somos-img-container">
-                    <img class="quienes-somos-img1" src="imagenes/imagen 1.png" alt="">
-                    <img class="quienes-somos-img2" src="imagenes/imagen 2.png" alt="">
-                    <img class="quienes-somos-img3" src="imagenes/imagen 3.png" alt="">
+                    <div class="img1-container"><img class="quienes-somos-img" src="imagenes/imagen-1.jpg" alt=""></div>
+                    <div class="img2-container"><img class="quienes-somos-img" src="imagenes/imagen-2.jpg" alt=""></div>
+                    <div class="img3-container"><img class="quienes-somos-img" src="imagenes/imagen-3.jpg" alt=""></div>
                 </div>
             </section>
            
