--- a/index.html
+++ b/index.html
@@ -91,15 +91,19 @@
                 <h2 class="contacto-title">Contacto</h2>
                 <div class="contacto-container">
                     <div class="contacto-info">
-                        <p><i class="fas fa-envelope"></i>mgjovanovich@yahoo.com</p> 
-                        <p><i class="fas fa-phone-alt"></i>02226-492168</p>
+                        <span class="mail-container"><i class="fas fa-envelope"></i><p class="mail">mgjovanovich@yahoo.com</p></span> 
+                        <span class="numero-container"><i class="fas fa-phone-alt"></i><p class="numero">02226-492168</p></span>
                         <h3>Nuestros horarios</h3>
                         <p>Lunes a viernes: 9hs-18hs</p>
                         <p>Sabados: 9hs-13hs</p>
                         <h3>Redes sociales</h3>
+                        <div>
+                            <a href="https://www.instagram.com/farmaciajovanovich/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/FarmaciaJova" targuet="_blank"><i class="fab fa-facebook-square"></i></a>
+                        </div>
                     </div>
                     <div class="contacto-ubicacion">
-                        <h3>Ubicación</h3>
+                        <h3 class="ubicacion-title">Ubicación</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6538.338337395214!2d-58.67573487504543!3d-34.97742713046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xae32323136f760!2sFarmacia%20Jovanovich!5e0!3m2!1ses-419!2sar!4v1601408267261!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
