--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <section class="que-hacemos-container" id="que-hacemos">
                 <h2 class="que-hacemos-title">Que hacemos</h2>
                 <ul class="que-hacemos-list">
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-capsules"></i>Laboratorio magistral de Excelencia</li></div>
+                    <a href="laboratorio.html"><div class="que-hacemos-list-cards"><li><i class="fas fa-capsules"></i>Laboratorio magistral de Excelencia</li></div></a>
                     <div class="que-hacemos-list-cards"><li><i class="fas fa-spa"></i></i>Homeopatía y Flores de Bach</li></div>
                     <div class="que-hacemos-list-cards"><li><i class="fab fa-pagelines"></i>Fitoterapia</li></div>
                     <div class="que-hacemos-list-cards"><li><i class="fas fa-mortar-pestle"></i></i>Cosmética natural</li></div>
@@ -93,9 +93,15 @@
                     <div class="contacto-info">
                         <span class="mail-container"><i class="fas fa-envelope"></i><p class="mail">mgjovanovich@yahoo.com</p></span> 
                         <span class="numero-container"><i class="fas fa-phone-alt"></i><p class="numero">02226-492168</p></span>
-                        <h3>Nuestros horarios</h3>
-                        <p>Lunes a viernes: 9hs-18hs</p>
-                        <p>Sabados: 9hs-13hs</p>
+                        <h3>Nuestros horarios</h3> 
+                        <div class="horario-semana">
+                            <p>Lunes a viernes: </p> 
+                            <p> 9hs-18hs</p>
+                        </div>
+                        <div class="horario-finde">
+                            <p>Sabados:</p> 
+                            <p>9hs-13hs</p>
+                        </div>
                         <h3>Redes sociales</h3>
                         <div>
                             <a href="https://www.instagram.com/farmaciajovanovich/" target="_blank"><i class="fab fa-instagram"></i></a>
