--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <section class="que-hacemos-container" id="que-hacemos">
                 <h2 class="que-hacemos-title">Que hacemos</h2>
                 <ul class="que-hacemos-list">
-                    <a href="laboratorio.html"><div class="que-hacemos-list-cards"><li><i class="fas fa-capsules"></i>Laboratorio magistral de Excelencia</li></div></a>
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-spa"></i></i>Homeopatía y Flores de Bach</li></div>
-                    <div class="que-hacemos-list-cards"><li><i class="fab fa-pagelines"></i>Fitoterapia</li></div>
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-mortar-pestle"></i></i>Cosmética natural</li></div>
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-spray-can"></i>Dermocosmética</li></div>
-                    <div class="que-hacemos-list-cards"><li><i class="fas fa-running"></i>Nutrición y deportes</li></div>
+                    <a href="laboratorio.html" target="_blank"><li><i class="fas fa-capsules"></i>Laboratorio magistral de Excelencia</li></a>
+                    <a href=""><li><i class="fas fa-spa"></i>Homeopatía y Flores de Bach</li></a>
+                    <a href=""><li><i class="fab fa-pagelines"></i>Fitoterapia</li></a>
+                    <a href=""><li><i class="fas fa-mortar-pestle"></i></i>Cosmética natural</li></a>
+                    <a href=""><li><i class="fas fa-spray-can"></i>Dermocosmética</li></a>
+                    <a href=""><li><i class="fas fa-running"></i>Nutrición y deportes</li></a>
                 </ul>
             </section>
             <!-- Fin que hacemos -->
@@ -91,21 +91,27 @@
                 <h2 class="contacto-title">Contacto</h2>
                 <div class="contacto-container">
                     <div class="contacto-info">
-                        <span class="mail-container"><i class="fas fa-envelope"></i><p class="mail">mgjovanovich@yahoo.com</p></span> 
-                        <span class="numero-container"><i class="fas fa-phone-alt"></i><p class="numero">02226-492168</p></span>
-                        <h3>Nuestros horarios</h3> 
-                        <div class="horario-semana">
-                            <p>Lunes a viernes: </p> 
-                            <p> 9hs-18hs</p>
+                        <div class="contacto-info1">
+                            <span class="mail-container"><i class="fas fa-envelope"></i><p class="mail">mgjovanovich@yahoo.com</p></span> 
+                            <span class="numero-container"><i class="fas fa-phone-alt"></i><p class="numero">02226-492168</p></span>
                         </div>
-                        <div class="horario-finde">
-                            <p>Sabados:</p> 
-                            <p>9hs-13hs</p>
-                        </div>
-                        <h3>Redes sociales</h3>
                         <div>
-                            <a href="https://www.instagram.com/farmaciajovanovich/" target="_blank"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.facebook.com/FarmaciaJova" targuet="_blank"><i class="fab fa-facebook-square"></i></a>
+                            <h3>Nuestros horarios</h3> 
+                            <div class="horario-semana">
+                                <p>Lunes a viernes: </p> 
+                                <p> 9hs-18hs</p>
+                            </div>
+                            <div class="horario-finde">
+                                <p>Sabados:</p> 
+                                <p>9hs-13hs</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <h3>Redes sociales</h3>
+                                <a href="https://www.instagram.com/farmaciajovanovich/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/FarmaciaJova" targuet="_blank"><i class="fab fa-facebook-square"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="contacto-ubicacion">
