Creacion de tienda

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="main-container">
+      <!-- NAVBAR -->
         <section class="navbar-container__desktop">
             <img class="img-logo" src="imagenes/Logo Etiquetas 3.png" alt="logo">
             <ul class="lista-1">
@@ -20,7 +21,14 @@
                 <li class="li-1"><a href="#pedidos">Pedidos</a></li>
                 <li class="li-1"><a href="#contacto">Contacto</a></li>
             </ul>
+            <div class="navbar-divisor"></div>
+            <ul class="lista-2">
+                <li class="li-2"><a href="tienda.html">Tienda online</a></li>
+                <li class="li-2"><a href="#registro">Registrarse</a></li>
+                <li class="li-2"><a href="#inicio-se">Iniciar sesión</a></li>
+            </ul>
         </section>
+        <!-- CONTAINER -->
         <div class="full-container">
             <section class="navbar-container__mobile">
                 <nav class="navbar-container__mobile__list">
