--- a/public/tienda.html
+++ b/public/tienda.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Laboratorio</title>
+    <title>Tienda online</title>
 </head>
 <body>
     <div class="main-container">
@@ -30,19 +30,18 @@
             <!-- CONTAINER -->
         </section>
         <div class="full-container">
-            <h1 class="laboratorio-title">Laborato magistral</h1>
-            <div class="laboratorio-content">
-                <div class="lab-content1">
-                    <div class="lab-content1-parr">
-                        <p>Los preparados magistrales son solicitados por los médicos cuando las especialidades que se ofrecen en el mercado no cubren las necesidades del paciente por distintos motivos (por ejemplo, cuando se necesitan dosis muy bajas, menores a las que se ofrecen en plaza) o bien cuando se indican varios principios activos que implicarían que el paciente tome varios comprimidos diferentes.</p>
-                        <p>Nuestro Laboratorio de recetas magistrales es atendido por personal capacitado, quienes luego de controlar la prescripción médica y las necesidades del paciente, preparan su medicamento, cumpliendo con las Buenas Prácticas de Elaboración Magistral</p>
-                    </div>
-                    <img class="imagen-laboratorio1" src="imagenes/lab-2.JPG" alt="producto">
-                </div>
-                <div class="lab-content2">
-                    <img class="imagen-laboratorio2" src="imagenes/lab-1.JPG" alt="laboratorio">
-                    <p>La preparación magistral es entregada al paciente de manos del farmacéutico, quien colaborando con el médico prescriptor, le informa sobre la forma de administración del medicamento y otras advertencias generales, entregando elementos para medir sus dosis</p>
-                </div> 
+            <h1 class="tienda-title">TIENDA ONLINE</h1>
+            <ul class="tienda-menu">
+                <li>Dermocosmética</li>
+                <li>Suplementos</li>
+                <li>Homeopatía</li>
+            </ul>
+            <div>
+                <p>PRODUCTO 1</p>
+                <p>PRODUCTO 2</p>
+                <p>PRODUCTO 3</p>
+                <p>PRODUCTO 4</p>
+                <p>PRODUCTO 5</p>
             </div>
             <!-- Inicio footer -->
             <footer class="footer" id="contacto">
