--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/style.css">
   <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -24,8 +25,8 @@
             <div class="navbar-divisor"></div>
             <ul class="lista-2">
                 <li class="li-2"><a href="tienda.html">Tienda online</a></li>
-                <li class="li-2"><a href="#registro">Registrarse</a></li>
-                <li class="li-2"><a href="#inicio-se">Iniciar sesión</a></li>
+                <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleModal">Registrarse</a></li>
+                <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleInicio">Iniciar sesión</a></li>
             </ul>
         </section>
         <!-- CONTAINER -->
@@ -130,16 +131,93 @@
             </footer>
         </div>
   </div>
-  <script src="https://kit.fontawesome.com/7aa36192fa.js" crossorigin="anonymous"></script>
-  <script type="application/javascript">
-    jQuery('input[type=file]').change(function(){
-     var filename = jQuery(this).val().split('\\').pop();
-     var idname = jQuery(this).attr('id');
-     console.log(jQuery(this));
-     console.log(filename);
-     console.log(idname);
-     jQuery('span.'+idname).next().find('span').html(filename);
-    });
+
+  <!-- Modal registro -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Registrate!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="limpiarForm()">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="agregar-produc-form" action="" method="">
+                        <label for="name">Nombre y apellido:</label><br>
+                        <input class="input-modal" type="text" id="nombre" name="name"><br>
+
+                        <label for="contraseña">Contraseña:</label><br>
+                        <input class="input-modal" type="password" id="constraseña" name="contraseña"><br>
+
+                        <label for="confirm-contraseña">Confirmar contraseña:</label><br>
+                        <input class="input-modal" type="password" id="confirm-constraseña" name="confirm-contraseña"><br>
+                    
+                        <label for="telefono">Telefono de contacto:</label><br>
+                        <input class="input-modal" type="number" id="telefono" name="telefono"><br>
+
+                        <label for="direccion">Dirección:</label><br>
+                        <input class="input-modal" type="text" id="direccion" name="direccion"><br>
+                    
+                        <label for="Precio">Mail:</label><br>
+                        <input class="input-modal" type="text" id="precio" name="precio"><br>
+
+                        <label for="dni">DNI:</label><br>
+                        <input class="input-modal" type="number" id="dni" name="dni"><br>
+                    </form>
+                    <span id="error-modal"></span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-success" onclick="guardarProducto(event)" id="guardar">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal inicio sesión -->
+    <div class="modal fade" id="exampleInicio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Inicia sesión!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="limpiarForm()">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="agregar-produc-form" action="" method="">
+                        <label for="Precio">Mail:</label><br>
+                        <input class="input-modal" type="text" id="precio" name="precio"><br>
+
+                        <label for="contraseña">Contraseña:</label><br>
+                        <input class="input-modal" type="password" id="constraseña" name="contraseña"><br>
+                    </form>
+                    <span id="error-modal"></span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-success" onclick="guardarProducto(event)" id="guardar">Aceptar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+    <script src="https://kit.fontawesome.com/7aa36192fa.js" crossorigin="anonymous"></script>
+    <script type="application/javascript">
+        jQuery('input[type=file]').change(function(){
+        var filename = jQuery(this).val().split('\\').pop();
+        var idname = jQuery(this).attr('id');
+        console.log(jQuery(this));
+        console.log(filename);
+        console.log(idname);
+        jQuery('span.'+idname).next().find('span').html(filename);
+        });
     </script>
 </body>
 </html>
