productos publicados ok

--- a/public/tienda.html
+++ b/public/tienda.html
@@ -36,12 +36,7 @@
                 <li>Suplementos</li>
                 <li>Homeopatía</li>
             </ul>
-            <div>
-                <p>PRODUCTO 1</p>
-                <p>PRODUCTO 2</p>
-                <p>PRODUCTO 3</p>
-                <p>PRODUCTO 4</p>
-                <p>PRODUCTO 5</p>
+            <div id="tienda-productos">
             </div>
             <!-- Inicio footer -->
             <footer class="footer" id="contacto">
@@ -73,6 +68,11 @@
             </footer>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/7aa36192fa.js" crossorigin="anonymous"></script>
+
+<!-- JS -->
+<script src="https://kit.fontawesome.com/7aa36192fa.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="js/productos.js"></script>
 </body>
 </html>
