subir productos avanzado

--- a/public/tienda.html
+++ b/public/tienda.html
@@ -38,6 +38,14 @@
             </ul>
             <div id="tienda-productos">
             </div>
+            <form action="">
+                <input type="text" id="nombre" placeholder="nombre"><br>
+                <input type="text" id="precio" placeholder="precio"><br>
+                <input type="text" id="id_producto" placeholder="id"><br>
+                <input type="text" id="categoria" placeholder="categoria"><br>
+                <input type="text" id="stock" placeholder="stock"><br>
+                <button id="btn-subir-producto">Subir</button>
+            </form>
             <!-- Inicio footer -->
             <footer class="footer" id="contacto">
                 <h2 class="contacto-title">Contacto</h2>
