--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             </ul>
             <div class="navbar-divisor"></div>
             <ul class="lista-2">
-                <li class="li-2"><a href="tienda.html">Tienda online</a></li>
+                <li class="li-2"><a href="tienda.html" target="_blank">Tienda online</a></li>
                 <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleModal">Registrarse</a></li>
                 <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleInicio">Iniciar sesión</a></li>
             </ul>
