--- a/public/laboratorio.html
+++ b/public/laboratorio.html
@@ -40,7 +40,7 @@
                     <img class="imagen-laboratorio1" src="imagenes/lab-2.JPG" alt="producto">
                 </div>
                 <div class="lab-content2">
-                    <img class="imagen-laboratorio2" src="imagenes/lab-1.JPG" alt="laboratorio">
+                    <div class="imagen-laboratorio2-container"><img class="imagen-laboratorio2" src="imagenes/lab-1.JPG" alt="laboratorio"></div>
                     <p>La preparación magistral es entregada al paciente de manos del farmacéutico, quien colaborando con el médico prescriptor, le informa sobre la forma de administración del medicamento y otras advertencias generales, entregando elementos para medir sus dosis</p>
                 </div> 
             </div>
