--- a/public/tienda.html
+++ b/public/tienda.html
@@ -37,6 +37,12 @@
                 <li>Homeopatía</li>
             </ul>
             <div id="tienda-productos">
+                <div class="productos">
+                    <img class="img-productos" src="" alt="">
+                    <h3 class="nombre-productos">NOMBRE PRODUCTO</h3>
+                    <h3 class="precio-productos">1234</h3>
+                    <button class="boton-productos">Agregar al carrito</button>
+                </div>
             </div>
             <form action="">
                 <input type="text" id="nombre" placeholder="nombre"><br>
@@ -46,6 +52,7 @@
                 <input type="text" id="stock" placeholder="stock"><br>
                 <button id="btn-subir-producto">Subir</button>
             </form>
+
             <!-- Inicio footer -->
             <footer class="footer" id="contacto">
                 <h2 class="contacto-title">Contacto</h2>
