avance plantilla productos

--- a/public/tienda.html
+++ b/public/tienda.html
@@ -43,6 +43,36 @@
                     <h3 class="precio-productos">1234</h3>
                     <button class="boton-productos">Agregar al carrito</button>
                 </div>
+                <div class="productos">
+                    <img class="img-productos" src="" alt="">
+                    <h3 class="nombre-productos">NOMBRE PRODUCTO</h3>
+                    <h3 class="precio-productos">1234</h3>
+                    <button class="boton-productos">Agregar al carrito</button>
+                </div>
+                <div class="productos">
+                    <img class="img-productos" src="" alt="">
+                    <h3 class="nombre-productos">NOMBRE PRODUCTO</h3>
+                    <h3 class="precio-productos">1234</h3>
+                    <button class="boton-productos">Agregar al carrito</button>
+                </div>
+                <div class="productos">
+                    <img class="img-productos" src="" alt="">
+                    <h3 class="nombre-productos">NOMBRE PRODUCTO</h3>
+                    <h3 class="precio-productos">1234</h3>
+                    <button class="boton-productos">Agregar al carrito</button>
+                </div>
+                <div class="productos">
+                    <img class="img-productos" src="" alt="">
+                    <h3 class="nombre-productos">NOMBRE PRODUCTO</h3>
+                    <h3 class="precio-productos">1234</h3>
+                    <button class="boton-productos">Agregar al carrito</button>
+                </div>
+                <div class="productos">
+                    <img class="img-productos" src="" alt="">
+                    <h3 class="nombre-productos">NOMBRE PRODUCTO</h3>
+                    <h3 class="precio-productos">1234</h3>
+                    <button class="boton-productos">Agregar al carrito</button>
+                </div>
             </div>
             <form action="">
                 <input type="text" id="nombre" placeholder="nombre"><br>
