--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,7 @@
                 </div>
             </footer>
         </div>
+        <div class="carrito"><a href=""><i class="fas fa-shopping-cart"></i></a></div>
   </div>
 
   <!-- Modal registro -->
