--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,25 @@
                         <i class="fas fa-times"></i>
                         </div>
                         <div class="navbar-contet">
-                        <a href="index.html">Home</a>
+                            <div class="navbar-mobile-container_1">
+                                <ul class="lista-1">
+                                    <li class="li-1"><a href="#home">Home</a></li>
+                                    <li class="li-1"><a href="#quienes-somos">Quienes somos</a></li>
+                                    <li class="li-1"><a href="#que-hacemos">Que hacemos</a></li>
+                                    <li class="li-1"><a href="#works">Noticias</a></li>
+                                    <li class="li-1"><a href="#pedidos">Pedidos</a></li>
+                                    <li class="li-1"><a href="#contacto">Contacto</a></li>
+                                </ul>
+                                <div class="navbar-divisor"></div>
+                                <ul class="lista-2">
+                                    <li class="li-2"><a href="tienda.html" target="_blank">Tienda online</a></li>
+                                    <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleModal">Registrarse</a></li>
+                                    <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleInicio">Iniciar sesión</a></li>
+                                    <img class="img-logo-lista-2" src="imagenes/Logo Etiquetas 3.png" alt="logo">
+                                </ul>
+                            </div>
+                            <!-- <div class="navbar-divisor"></div> -->
+                            <img class="img-logo" src="imagenes/Logo Etiquetas 3.png" alt="logo">
                         </div>
                     </label>
                 </nav>
@@ -130,7 +148,7 @@
                 </div>
             </footer>
         </div>
-        <div class="carrito"><a href=""><i class="fas fa-shopping-cart"></i></a></div>
+        <div class="carrito"><a href="carrito.html" target="_blank"><i class="fas fa-shopping-cart"></i></a></div>
   </div>
 
   <!-- Modal registro -->
