--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="contacto-ubicacion">
                         <h3 class="ubicacion-title">Ubicación</h3>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6538.338337395214!2d-58.67573487504543!3d-34.97742713046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xae32323136f760!2sFarmacia%20Jovanovich!5e0!3m2!1ses-419!2sar!4v1601408267261!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe class="mapa-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6538.338337395214!2d-58.67573487504543!3d-34.97742713046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xae32323136f760!2sFarmacia%20Jovanovich!5e0!3m2!1ses-419!2sar!4v1601408267261!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </footer>
