--- a/public/carrito.html
+++ b/public/carrito.html
@@ -15,7 +15,7 @@
             <!-- NAVBAR -->
             <img class="img-logo" src="imagenes/Logo Etiquetas 3.png" alt="logo">
             <ul class="lista-1">
-                <li class="li-1"><a href="index.html#home">Home</a></li>
+                <li class="li-1"><a href="index.html#home" target="_blank">Home</a></li>
                 <li class="li-1"><a href="#quienes-somos">Quienes somos</a></li>
                 <li class="li-1"><a href="#que-hacemos">Que hacemos</a></li>
                 <li class="li-1"><a href="#works">Noticias</a></li>
@@ -31,6 +31,40 @@
         </section>
         <!-- CONTAINER -->
         <div class="full-container">
+            <section class="navbar-container__mobile">
+                <nav class="navbar-container__mobile__list">
+                    <label for="navbar" class="navbar-container__mobile__list__label">
+                        <input type="checkbox" id="navbar" class="navbar-input" />
+                        <div class="navbar-open">
+                        <i class="fas fa-bars"></i>
+                        </div>
+                        <div class="navbar-close">
+                        <i class="fas fa-times"></i>
+                        </div>
+                        <div class="navbar-contet">
+                            <div class="navbar-mobile-container_1">
+                                <ul class="lista-1">
+                                    <li class="li-1"><a href="#home">Home</a></li>
+                                    <li class="li-1"><a href="#quienes-somos">Quienes somos</a></li>
+                                    <li class="li-1"><a href="#que-hacemos">Que hacemos</a></li>
+                                    <li class="li-1"><a href="#works">Noticias</a></li>
+                                    <li class="li-1"><a href="#pedidos">Pedidos</a></li>
+                                    <li class="li-1"><a href="#contacto">Contacto</a></li>
+                                </ul>
+                                <div class="navbar-divisor"></div>
+                                <ul class="lista-2">
+                                    <li class="li-2"><a href="tienda.html" target="_blank">Tienda online</a></li>
+                                    <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleModal">Registrarse</a></li>
+                                    <li class="li-2"><a href="" data-toggle="modal" data-target="#exampleInicio">Iniciar sesión</a></li>
+                                    <img class="img-logo-lista-2" src="imagenes/Logo Etiquetas 3.png" alt="logo">
+                                </ul>
+                            </div>
+                            <!-- <div class="navbar-divisor"></div> -->
+                            <img class="img-logo" src="imagenes/Logo Etiquetas 3.png" alt="logo">
+                        </div>
+                    </label>
+                </nav>
+            </section>
             <h1 class="tienda-title">CARRITO <i class="fas fa-shopping-cart"></i></h1>
             <div class="carrito-subtitulo">
                 <h2>TUS PRODUCTOS</h2>
@@ -120,7 +154,7 @@
                     </div>
                     <div class="contacto-ubicacion">
                         <h3 class="ubicacion-title">Ubicación</h3>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6538.338337395214!2d-58.67573487504543!3d-34.97742713046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xae32323136f760!2sFarmacia%20Jovanovich!5e0!3m2!1ses-419!2sar!4v1601408267261!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe class="mapa-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6538.338337395214!2d-58.67573487504543!3d-34.97742713046572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xae32323136f760!2sFarmacia%20Jovanovich!5e0!3m2!1ses-419!2sar!4v1601408267261!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </footer>
